# pardis

./: LICENSE  README.md  pardis.cabal  stack.yaml
app/: Crawler.hs  Distributed.hs  Parallel.hs
src/: Pardis.hs
src/Pardis/: Distributed.hs  Parallel.hs
src/Pardis/Distributed/: TH.hs
