name:                pardis
version:             1.0.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/chrisbloecker/pardis#readme
license:             MIT
license-file:        LICENSE
author:              Christopher Blöcker, Ulrich Hoffmann
maintainer:          chrisbloecker@gmail.com
copyright:           2017 Christopher Blöcker, Ulrich Hoffmann
category:            Programming
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Pardis
                       Pardis.Distributed
                       Pardis.Distributed.TH
                       Pardis.Parallel
  build-depends:       base
                     , constraints
                     , deepseq
                     , distributed-process
                     , template-haskell

executable crawler-parallel
  hs-source-dirs:     app
  main-is:            Parallel.hs
  other-modules:      Crawler
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:      base
                    , bytestring
                    , containers
                    , http-conduit
                    , pardis
                    , tagsoup
  default-language:   Haskell2010

executable crawler-distributed
  hs-source-dirs:     app
  main-is:            Distributed.hs
  other-modules:      Crawler
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:      base
                    , binary
                    , bytestring
                    , containers
                    , distributed-process
                    , http-conduit
                    , network-transport-tcp
                    , pardis
                    , tagsoup
  default-language:   Haskell2010
